# victron-controller

./: .gitignore  CLAUDE.md  Cargo.toml  SPEC.md  config.example.toml  defects.md  flake.nix  tasks.md
crates/core/: Cargo.toml
crates/core/src/: clock.rs  heating_curve_addr.rs  knobs.rs  lib.rs  myenergi.rs  owner.rs  process.rs  topology.rs  types.rs  tz.rs  weather_soc_addr.rs  world.rs
crates/core/src/controllers/: current_limit.rs  eddi_mode.rs  ess_state_override.rs  forecast_fusion.rs  heat_pump.rs  mod.rs  schedules.rs  setpoint.rs  tariff_band.rs  weather_soc.rs  zappi_active.rs  zappi_mode.rs
crates/core/src/core_dag/: cores.rs  mod.rs  tests.rs
crates/core/src/tass/: actual.rs  actuated.rs  freshness.rs  mod.rs  phase.rs  timestamped.rs
crates/core/tests/: property_process.proptest-regressions  property_process.rs
crates/dashboard-model/: Cargo.toml
crates/dashboard-model/src/: baboon_runtime.rs  baboon_service_wiring.rs  lib.rs
crates/dashboard-model/src/victron_controller/: mod.rs
crates/dashboard-model/src/victron_controller/dashboard/: actual_bool.rs  actual_f64.rs  actual_i32.rs  actuated.rs  actuated_bool.rs  actuated_enum_name.rs  actuated_f64.rs  actuated_i32.rs  actuated_schedule.rs  bookkeeping.rs  bookkeeping_key.rs  bookkeeping_value.rs  charge_battery_extended_mode.rs  command.rs  command_ack.rs  core_factor.rs  core_state.rs  cores_state.rs  decision.rs  decisions.rs  diagnostics.rs  forecast_snapshot.rs  forecasts.rs  freshness.rs  from_0_1_0_actual_f64.rs  from_0_1_0_actual_i32.rs  from_0_1_0_actuated.rs  from_0_1_0_actuated_enum_name.rs  from_0_1_0_actuated_f64.rs  from_0_1_0_actuated_i32.rs  from_0_1_0_actuated_schedule.rs  from_0_1_0_bookkeeping.rs  from_0_1_0_charge_battery_extended_mode.rs  from_0_1_0_command.rs  from_0_1_0_command_ack.rs  from_0_1_0_command_set_bool_knob.rs  from_0_1_0_command_set_charge_battery_extended_mode.rs  from_0_1_0_command_set_debug_full_charge.rs  from_0_1_0_command_set_discharge_time.rs  from_0_1_0_command_set_float_knob.rs  (+135 more)
crates/dashboard-model/src/victron_controller/dashboard/v0_1_0/: actual_f64.rs  actual_i32.rs  actuated.rs  actuated_enum_name.rs  actuated_f64.rs  actuated_i32.rs  actuated_schedule.rs  command.rs  debug_full_charge.rs  decision.rs  decisions.rs  discharge_time.rs  forecast_disagreement_strategy.rs  forecasts.rs  knobs.rs  mod.rs  sensors.rs  target_phase.rs  version_info.rs  world_snapshot.rs  ws_client_message.rs  ws_pong.rs  ws_server_message.rs
crates/dashboard-model/src/victron_controller/dashboard/v0_2_0/: actual_f64.rs  actual_i32.rs  actuated.rs  actuated_enum_name.rs  actuated_f64.rs  actuated_i32.rs  actuated_schedule.rs  bookkeeping.rs  bookkeeping_value.rs  command.rs  core_state.rs  cores_state.rs  debug_full_charge.rs  decision.rs  decision_factor.rs  decisions.rs  extended_charge_mode.rs  forecast_snapshot.rs  forecasts.rs  from_0_1_0_actual_f64.rs  from_0_1_0_actual_i32.rs  from_0_1_0_actuated.rs  from_0_1_0_actuated_enum_name.rs  from_0_1_0_actuated_f64.rs  from_0_1_0_actuated_i32.rs  from_0_1_0_actuated_schedule.rs  from_0_1_0_bookkeeping.rs  from_0_1_0_charge_battery_extended_mode.rs  from_0_1_0_command.rs  from_0_1_0_command_ack.rs  from_0_1_0_command_set_bool_knob.rs  from_0_1_0_command_set_charge_battery_extended_mode.rs  from_0_1_0_command_set_debug_full_charge.rs  from_0_1_0_command_set_discharge_time.rs  from_0_1_0_command_set_float_knob.rs  from_0_1_0_command_set_forecast_disagreement_strategy.rs  from_0_1_0_command_set_kill_switch.rs  from_0_1_0_command_set_uint_knob.rs  from_0_1_0_debug_full_charge.rs  from_0_1_0_decision.rs  (+42 more)
crates/lg-thinq-client/: Cargo.toml  README.md
crates/lg-thinq-client/src/: api.rs  auth.rs  cert.rs  error.rs  heat_pump.rs  lib.rs  mqtt.rs  provision.rs  region.rs
crates/lg-thinq-client/tests/: integration.rs
crates/shell/: Cargo.toml  build.rs
crates/shell/src/: clock.rs  config.rs  diagnostics.rs  lib.rs  main.rs  runtime.rs
crates/shell/src/dashboard/: convert.rs  convert_schedule.rs  convert_soc_chart.rs  mod.rs  server.rs  soc_history.rs  ws.rs
crates/shell/src/dbus/: mod.rs  pinned.rs  subscriber.rs  writer.rs
crates/shell/src/forecast/: baseline.rs  current_weather.rs  forecast_solar.rs  mod.rs  open_meteo.rs  solcast.rs  sunrise_sunset.rs
crates/shell/src/lg_thinq/: discovery.rs  mod.rs
crates/shell/src/mqtt/: discovery.rs  log_layer.rs  mod.rs  serialize.rs
crates/shell/src/myenergi/: mod.rs  types.rs
crates/shell/static/: bundle.js  index.html  index.js  style.css
docs/drafts/: 20260424-0000-m-audit-plan.md  20260424-1700-m-audit-2-pr-dag-plan.md  20260424-1910-nix-arm-build-plan.md  20260424-1959-victron-dbus-cadence-matrix.md  20260424-2245-pr-writer-reconnect.md  20260425-0130-m-ux-1-plan.md  20260425-1103-pr-cadence-per-sensor-plan.md  20260425-1947-pr-actuated-as-sensors.md  20260427-1133-pr-zappi-schedule-stop.md  20260429-1700-m-zappi-drain-plan.md  20260430-2000-m-zappi-drain-obs-plan.md  20260501-2030-m-eddi-sensors-plan.md  20260501-2207-m-actuated-retry-plan.md  20260501-2207-m-desynthetics-plan.md  20260501-2207-m-typed-sensors-meta-plan.md  20260504-1530-m-wsoc-table-plan.md  20260504-1700-pr-wsoc-edit-1-plan.md  20260504-1815-pr-wsoc-edit-2-plan.md  20260509-1502-questions-weather-soc-forecast-temp.md  20260512-1305-m-lg-thinq-phase-b-plan.md
docs/logs/: 20260424-1530-log.md  20260424-1900-log.md  20260424-2030-log.md  20260424-2200-log.md  20260424-2300-log.md  20260427-1152-log.md  20260429-1917-log.md  20260430-1055-log.md  20260501-2124-log.md  20260501-2343-log.md  20260504-1640-log.md  20260504-1800-log.md  20260504-1930-log.md  20260512-1516-log.md
models/: dashboard-0.1.0.baboon  dashboard-0.2.0.baboon  dashboard.baboon
scripts/: build-web.sh  clear-legacy-mqtt-entities.sh  diagnose-mqtt-retained.sh  discover-victron.sh  fetch-logs.sh  grep-victron-dbus.sh  install-victron.sh  regen-baboon.sh
web/: package-lock.json  package.json  tsconfig.json
web/src/: chart.ts  connection.ts  descriptions.ts  displayNames.ts  index.ts  knobs.ts  manager.ts  render.test.ts  (+2 more)
(+320 files in other folders)
