[workspace]
resolver = "2"
members = ["crates/core", "crates/shell"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Ports of a JS algorithm use a lot of literal comparisons and documentation
# mentions domain terms (SoC, PV, Zappi). These are style nitpicks that
# don't improve correctness.
doc_markdown = "allow"
float_cmp = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
similar_names = "allow"
# More style nitpicks that pedantic flags in the async shell code.
wildcard_imports = "allow"
enum_glob_use = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
match_single_binding = "allow"
derivable_impls = "allow"
items_after_statements = "allow"
redundant_else = "allow"
