[workspace]
resolver = "2"
members = ["crates/core", "crates/shell", "crates/dashboard-model"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Ports of a JS algorithm use a lot of literal comparisons and documentation
# mentions domain terms (SoC, PV, Zappi). These are style nitpicks that
# don't improve correctness.
doc_markdown = "allow"
float_cmp = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
similar_names = "allow"
# More style nitpicks that pedantic flags in the async shell code.
wildcard_imports = "allow"
enum_glob_use = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
match_single_binding = "allow"
derivable_impls = "allow"
items_after_statements = "allow"
redundant_else = "allow"

# Ship-to-Venus profile. Trades ~5% compile time for a dramatically
# smaller + faster binary:
#   opt-level="z"     optimise for size; the controller is almost all
#                     arithmetic + I/O, no hot loops
#   lto=true          fat LTO across the whole workspace
#   codegen-units=1   maximum inlining opportunity (slower to compile)
#   strip="symbols"   drop debug sections from the final ELF
#   panic="abort"     smaller unwind tables; Venus has no panic handler
#                     that would benefit from unwinding anyway
#   overflow-checks=true  keep runtime checks — cheap and catches bugs
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true
