[package]
name = "victron-controller-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure TASS core for the victron-controller service"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }

[lints]
workspace = true
