[package]
name = "victron-controller-dashboard-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Generated baboon wire-format types for the dashboard API"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
rust_decimal = { version = "1", features = ["serde-with-str"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[features]
default = ["json-helpers"]
decimal = ["dep:rust_decimal"]
json-helpers = ["dep:serde_json"]
timestamps = ["dep:chrono"]
uuids = ["dep:uuid"]
